landing page updated with logo and Learnable.ai identity. css enhanced with @media component for different font size and image size on mobile screens. Navbar invisible hamburger problem fixed with font awesome icon

--- a/style.css
+++ b/style.css
@@ -5,13 +5,40 @@ body,html {
   background-color: #e9e9e9;
 }
 
-.logo_img{
-  width: 100%;
-  height:100%;
+.logo_img {
+  width:25%;
+  height:25%;
+}
+
+.logo_words {
+  width: 90%;
+  height:90%;
 }
 
 .landing-words {
   text-shadow: 2px 2px 20px #a8a8a8;
+}
+
+h3 {
+  font-size:30px;
+}
+
+/* 768px is medium sreen size */
+@media screen and (max-width: 768px) {
+
+  h3 {
+    font-size: 20px;
+  }
+
+  .logo_img {
+    width:40%;
+    height:40%;
+  }
+
+  .logo_words {
+    width: 100%;
+    height:100%;
+  }
 }
 
 hr {
